# dog

legged-ego-planner/: .gitignore  README.md  说明文档.md
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/: CMakeLists.txt  a1_sim.cpp  package.xml  state_from_gazebo.cpp
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/config/: config.h  types.h
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/config/a1/: a1_robot.yaml  main.yaml  openloop_gait_generator.yaml  stance_leg_controller.yaml  swing_leg_controller.yaml
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/config/a1_sim/: a1_sim.yaml  main.yaml  openloop_gait_generator.yaml  stance_leg_controller.yaml  swing_leg_controller.yaml
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/config/aliengo/: aliengo_robot.yaml  main.yaml  openloop_gait_generator.yaml  stance_leg_controller.yaml  swing_leg_controller.yaml
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/config/go1/: robot_go1.yaml  stance_leg_controller.yaml
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/include/action/: action.h
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/include/mpc_controller/: foot_trajectory_generator.h  locomotion_controller.h  openloop_gait_generator.h  qp_torque_optimizer.h  raibert_swing_leg_controller.h  torque_stance_leg_controller.h
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/include/planner/: com_adjuster.h  foot_stepper.h  local_planner.h
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/include/robots/: a1_robot.h  motor.h  robot.h  robot_go1.h  timer.h
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/include/ros/: cmd_vel_receiver.h  robot_odom_estimator.h  slam_pose_receiver.h
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/include/sim/: a1_sim.h
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/include/state_estimator/: filter.h  robot_estimator.h  robot_pose_estimator.h  robot_velocity_estimator.h
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/include/unitree_legged_msgs/: HighCmd.h  HighState.h  LowState.h
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/include/utils/: algebra.h  cppTypes.h  geometry.h  se3.h  tools.h
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/src/action/: action.cpp
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/src/mpc_controller/: foot_trajectory_generator.cpp  locomotion_controller.cpp  openloop_gait_generator.cpp  qp_torque_optimizer.cpp  raibert_swing_leg_controller.cpp  torque_stance_leg_controller.cpp
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/src/planner/: com_adjuster.cpp  foot_stepper.cpp  local_planner.cpp
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/src/robots/: a1_robot.cpp  motor.cpp  robot.cpp  robot_go1.cpp
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/src/ros/: cmd_vel_receiver.cpp  robot_odom_estimator.cpp  slam_pose_receiver.cpp
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/src/sim/: a1_sim.cpp
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/src/state_estimator/: filter.cpp  robot_estimator.cpp  robot_pose_estimator.cpp  robot_velocity_estimator.cpp
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/src/utils/: geometry.cpp
legged-ego-planner/src/robots/src/ascend-quadruped-cpp/tests/ut/: gtest_demo.cpp  test_locomotion_controller.cpp  test_openloop_gait_generator.cpp  test_qp_torque_optimizer.cpp  test_robot.cpp  test_robot_velocity_estimator.cpp  test_swing_leg_controller.cpp  test_timer.cpp  test_torque_stance_leg_controller.cpp
legged-ego-planner/src/robots/src/realsense_ros_gazebo/launch/: simulation.launch
legged-ego-planner/src/robots/src/realsense_ros_gazebo/xacro/: depthcam.xacro  tracker.xacro
model-control/src/: 文件介绍.txt
model-control/src/examples/: CMakeLists.txt
model-control/src/examples/example_keyboard/: example_keyboard.cpp
model-control/src/examples/example_lite3_real/: example_lite3_real.cpp
model-control/src/examples/example_lite3_sim/: example_lite3_sim.cpp
model-control/src/quadruped/: CMakeLists.txt
model-control/src/quadruped/config/: user_parameters.yaml
model-control/src/quadruped/include/quadruped/exec/: qr_robot_runner.h
model-control/src/quadruped/include/quadruped/robots/: qr_robot.h  qr_robot_lite3.h
model-control/src/quadruped/src/action/: qr_action.cpp
model-control/src/quadruped/src/controllers/: 代码说明.txt
model-control/src/quadruped/src/controllers/balance_controller/: 代码说明.txt
model-control/src/quadruped/src/robots/: qr_robot.cpp  qr_robot_lite3.cpp
model-control/src/robot_description/lite3_description/xacro/: body.xacro
rl-control/rl-inference/: .gitignore  README.md
rl-control/rl-inference/src/examples/: CMakeLists.txt
rl-control/rl-inference/src/examples/example_a1_real/: example_a1_real.cpp
rl-control/rl-inference/src/examples/example_lite3_real/: example_lite3_real.cpp
rl-control/rl-inference/src/quadruped/: CMakeLists.txt
rl-control/rl-inference/src/quadruped/config/: qr_enum_types.h  user_parameters.yaml
rl-control/rl-inference/src/quadruped/config/a1/: a1_robot.yaml  main.yaml  openloop_gait_generator.yaml  stance_leg_controller.yaml
rl-control/rl-inference/src/quadruped/config/lite3/: lite3_robot.yaml  main.yaml  openloop_gait_generator.yaml  stance_leg_controller.yaml
rl-control/rl-inference/src/quadruped/config/lite3_sim/: robot.yaml
rl-control/rl-inference/src/quadruped/src/controllers/: qr_desired_state_command.cpp  qr_swing_leg_controller.cpp  rl_locomotion_controller.cpp
rl-control/rl-inference/src/quadruped/src/exec/: qr_robot_runner.cpp
rl-control/rl-inference/src/quadruped/src/fsm/: qr_control_fsm.cpp  qr_fsm_state_locomotion.cpp  qr_fsm_state_rl_locomotion.cpp  qr_fsm_state_standup.cpp
rl-control/rl-robotics/: README.md
rl-control/rl-robotics/legged_gym/legged_gym/scripts/: play.py
rl-control/rl-robotics/legged_gym/legged_gym/utils/: helpers.py  isaacgym_utils.py  task_registry.py
rl-control/rl-robotics/rsl_rl/rsl_rl/runners/: on_policy_runner.py
(+65 files in other folders)
